# whatsapp-chat-statistics

./: .gitignore  .style.yapf  README.md  chat_analysis.py  core.py  main.py  pyproject.toml
chat_data/: README.md
