[tool.poetry]
name = "whatsapp-chat-statistics"
version = "0.1.0"
description = ""
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
wordcloud = "^1.8.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
